--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -738,3 +738,7 @@ ide.screenreader.autodetect.accessibility.description=Automatically detect wheth
 
 editor.rainbow.identifiers=false
 editor.rainbow.identifiers.description=Rainbow identifiers in editor
+
+ide.http.server.response.actual.status=false
+ide.rest.api.requests.per.minute=30
+ide.built.in.web.server.activatable=false
